--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.cache=false
 
+spring.servlet.multipart.max-file-size=1MB
+
 server.port=8000
